@@ -17,6 +17,8 @@ package org.apache.solr.analysis;
  */
 
 import org.apache.lucene.analysis.ar.ArabicLetterTokenizer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.Reader;
 import java.util.Map;
@@ -29,11 +31,13 @@ import java.util.Map;
 @Deprecated
 public class ArabicLetterTokenizerFactory extends BaseTokenizerFactory{
 
+  private static final Logger log = LoggerFactory.getLogger(ArabicLetterTokenizerFactory.class);
+
   @Override
   public void init(Map<String,String> args) {
     super.init(args);
     assureMatchVersion();
-    warnDeprecated("Use StandardTokenizerFactory instead.");
+    log.warn(getClass().getSimpleName() + " is deprecated. Use StandardTokenizeFactory instead.");
   }
 
   public ArabicLetterTokenizer create(Reader input) {
